# jsonhelix

./: CMakeLists.txt  README.md  build.bat  build.ps1  build.sh
include/: api_client.h  bson.h  input.h  json_parser.h  json_tools.h  json_validator.h  renderer.h  settings.h  utils.h  x11_window.h
src/: api_client.c  bson.c  input.c  json_parser.c  json_tools.c  json_validator.c  main.c  renderer.c  settings.c  utils.c  x11_window.c
